--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:name=".CONFIG.AppController"
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:icon="@drawable/gm"
+        android:icon="@mipmap/init_gm"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
