--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -44,6 +45,7 @@
         <activity
             android:name=".MAPS.MapsActivity"
             android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -56,6 +58,7 @@
 
         <activity android:name=".LOGIN.LogInActivity"
             android:label="Login"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -63,10 +66,12 @@
         </activity>
         <activity
             android:name=".DetalhesActivity"
+			android:screenOrientation="portrait"
             android:label="Detalhes"
             android:theme="@style/AppTheme">
         </activity>
-        <activity android:name=".TUTORIAL.TutorialActivity">
+        <activity android:name=".TUTORIAL.TutorialActivity"
+        	    android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.juniorf.tcc.MainActivity" />
